--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,12 @@
       全台最大的鋼琴譜網站，提供免費的鋼琴譜下載，包含流行音樂、古典音樂、動漫音樂等各類型的鋼琴譜。
       亦提供客製化的鋼琴譜製作服務，讓您可以輕鬆學習鋼琴。"
     />
-    <link rel="apple-touch-icon" href="https://pianolang.com/logo192.png" />
+    <link rel="apple-touch-icon" href="https://www.pianolang.com/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="https://pianolang.com/manifest.json" />
+    <link rel="manifest" href="https://www.pianolang.com/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
