update manifest and index.html

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="logo.png" />
+    <link rel="icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -11,12 +11,12 @@
       全台最大的鋼琴譜網站，提供免費的鋼琴譜下載，包含流行音樂、古典音樂、動漫音樂等各類型的鋼琴譜。
       亦提供客製化的鋼琴譜製作服務，讓您可以輕鬆學習鋼琴。"
     />
-    <link rel="apple-touch-icon" href="https://www.pianolang.com/logo192.png" />
+    <link rel="apple-touch-icon" href="/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="https://www.pianolang.com/manifest.json" />
+    <link rel="manifest" href="/manifest.json" />
 
     <title>琴語鋼琴網
     </title>
