update index.html meta description and keywords; add Privacy Policy route in App component; enhance footer links and styles; adjust product link behavior in productSlider; clean up unused loading states in CreatorOrder component

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="琴語鋼琴網 - 原廷廷鋼琴網，原站關閉，現改為琴語鋼琴網。
-      全台最大的鋼琴譜網站，提供免費的鋼琴譜下載，包含流行音樂、古典音樂、動漫音樂等各類型的鋼琴譜。
+      content="琴語鋼琴網 - 原廷廷鋼琴網，因原站關閉，創作者們集體另起爐灶，改為琴語鋼琴網。
+      全台最大的鋼琴譜網站，提供各式的高品質鋼琴譜下載，包含流行音樂、古典音樂、動漫音樂等各類型的鋼琴譜和簡譜。
       亦提供客製化的鋼琴譜製作服務，讓您可以輕鬆學習鋼琴。"
     />
     <link rel="apple-touch-icon" href="/logo192.png" />
@@ -17,7 +17,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="/manifest.json" />
-
+    <meta name="keywords" content="琴譜, 流行琴譜, 古典琴譜, 動漫琴譜, 鋼琴譜, 簡譜, 鋼琴譜下載, 鋼琴譜製作, 鋼琴譜教學, 鋼琴譜學習, 鋼琴譜練習, 鋼琴譜演奏, 廷廷鋼琴網, 琴語鋼琴網, 鋼琴譜網站, 鋼琴譜下載網站, 鋼琴譜教學網站, 鋼琴譜學習網站, 鋼琴譜練習網站, 鋼琴譜演奏網站, 鋼琴譜網站推薦, 鋼琴譜網站評價, 鋼琴譜網站排名, 鋼琴譜網站推薦, 鋼琴譜網站評價, 鋼琴譜網站排名, 鋼琴譜網站推薦, 鋼琴譜網站評價, 鋼琴譜網站排名">
     <title>琴語鋼琴網
     </title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4117066742183757"
@@ -26,15 +26,5 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
