--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="/manifest.json" />
-    <meta name="keywords" content="琴譜, 流行琴譜, 古典琴譜, 動漫琴譜, 鋼琴譜, 簡譜, 鋼琴譜下載, 鋼琴譜製作, 鋼琴譜教學, 鋼琴譜學習, 鋼琴譜練習, 鋼琴譜演奏, 廷廷鋼琴網, 琴語鋼琴網, 鋼琴譜網站, 鋼琴譜下載網站, 鋼琴譜教學網站, 鋼琴譜學習網站, 鋼琴譜練習網站, 鋼琴譜演奏網站, 鋼琴譜網站推薦, 鋼琴譜網站評價, 鋼琴譜網站排名, 鋼琴譜網站推薦, 鋼琴譜網站評價, 鋼琴譜網站排名, 鋼琴譜網站推薦, 鋼琴譜網站評價, 鋼琴譜網站排名">
+    <meta name="keywords" content="琴譜, 流行琴譜, 古典琴譜, 動漫琴譜, 鋼琴譜, 簡譜, 鋼琴譜下載, 鋼琴譜製作, 鋼琴譜教學, 廷廷鋼琴窩, 廷廷的鋼琴窩, 廷廷鋼琴網, 廷廷的鋼琴網, 鋼琴譜學習, 鋼琴譜練習, 鋼琴譜演奏, 廷廷鋼琴網, 琴語鋼琴網, 鋼琴譜網站, 鋼琴譜下載網站, 鋼琴譜教學網站, 鋼琴譜學習網站, 鋼琴譜練習網站, 鋼琴譜演奏網站, 鋼琴譜網站推薦, 鋼琴譜網站評價, 鋼琴譜網站排名, 鋼琴譜網站推薦, 鋼琴譜網站評價, 鋼琴譜網站排名, 鋼琴譜網站推薦, 鋼琴譜網站評價, 鋼琴譜網站排名">
     <title>琴語鋼琴網
     </title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4117066742183757"
